add API GATEWAY feature
