# routes/index.js
@@ -11,4 +11,9 @@ router.post('/book/search', (req, res) => { app.searchBook(req, res) });
 
 router.get('/books', (req, res) => { app.getBooks(req, res) });
 
+/** Public API HEHE */
+router.get('/catalogue', (req, res) => { app.getCatalogue(req, res)});
+
+router.post('/catalogue', (req, res) => { app.addCatalogue(req, res)});
+
 module.exports = router;
